--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
   },
   "devDependencies": {
     "@types/react": "^19.0.4",
-    "@types/react-dom": "^19.0.2"
+    "@types/react-dom": "^19.0.2",
+    "chai": "^5.1.2",
+    "cypress": "^13.12.0",
+    "mocha": "^11.1.0"
   }
 }
